-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u141, 9, 10
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8189615 | 8u172 | Murali Billa | P3 | Resolved | Fixed | b01 |
| JDK-8193774 | 8u171 | Murali Billa | P3 | Resolved | Fixed | b01 |
ASSERTION FAILED: url == m_string
/home/murali/Apr_CPU/rt/modules/javafx.web/src/main/native/Source/WebCore/platform/URL.cpp(372) : WebCore::URL::URL(WebCore::ParsedURLStringTag, const WTF::String&)
1 0x7fda6a7c69b3 WTFCrash
2 0x7fda68c4db4e
3 0x7fda693cad84
4 0x7fda693cabc1 Java_com_sun_webkit_network_URLLoader_twkDidFail
5 0x7fdae5b60d35
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fda6a7c69b8, pid=7048, tid=7076
#
# JRE version: Java(TM) SE Runtime Environment (9.0+180) (build 9+180)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (9+180, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# C [libjfxwebkit.so+0x2daa9b8] WTFCrash+0x23
#
/home/murali/Apr_CPU/rt/modules/javafx.web/src/main/native/Source/WebCore/platform/URL.cpp(372) : WebCore::URL::URL(WebCore::ParsedURLStringTag, const WTF::String&)
1 0x7fda6a7c69b3 WTFCrash
2 0x7fda68c4db4e
3 0x7fda693cad84
4 0x7fda693cabc1 Java_com_sun_webkit_network_URLLoader_twkDidFail
5 0x7fdae5b60d35
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fda6a7c69b8, pid=7048, tid=7076
#
# JRE version: Java(TM) SE Runtime Environment (9.0+180) (build 9+180)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (9+180, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# C [libjfxwebkit.so+0x2daa9b8] WTFCrash+0x23
#
- backported by
-
JDK-8189615 Crash due to ASSERT(url == m_string) fail while loading URL
-
- Resolved
-
-
JDK-8193774 Crash due to ASSERT(url == m_string) fail while loading URL
-
- Resolved
-