8189350: Crash due to ASSERT(url == m_string) fail  while loading URL

Reviewed-by: arajkumar, kcr